# bs-gtk-test

./: .gitignore  CMakeLists.txt
cmake/: CMakeLists.txt  cc_binary.cmake  cc_library.cmake  cc_proto_library.cmake  compiler.cmake  module.cmake
cmake/rules/: cc_library.cmake  cc_proto_library.cmake  cc_python_module.cmake  cc_rules.cmake  cc_test.cmake
cmake/toolchains/: clang.cmake  gcc.cmake
src/: CMakeLists.txt
src/ag/: CMakeLists.txt  ag_entry.cpp  ag_entry.h  ag_search.cpp  ag_search.h
src/ag/test/: CMakeLists.txt  ag_search_test.cpp
src/app/: CMakeLists.txt  main.cpp
src/app/logic/: AgWorker.cpp  AgWorker.h  CMakeLists.txt
src/app/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  app_main.cpp  app_main.h
src/assets/: CMakeLists.txt
src/assets/glade/: ag.glade  ag.glade~  test.glade~
src/assets/in/: CMakeLists.txt  project.h.in
src/core/: CMakeLists.txt  compiler.h  logging.cpp  logging.h
src/core/compiler/: CMakeLists.txt
src/core/logging/: CMakeLists.txt  logging.cpp  logging.h
src/proto/: CMakeLists.txt  msg.proto
src/proto/test/: CMakeLists.txt  test.cpp
src/python/: CMakeLists.txt  greet.cpp  greet.h  py_greet.cpp
src/test/bench/: CMakeLists.txt
src/test/unit/: CMakeLists.txt  test.cpp  unit_tests_main.cpp
